src/objects/Trigger_Handler_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_After_Delete_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Delete Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_After_Insert_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Insert Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_After_Undelete_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Undelete Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_After_Update_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Update Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Before_Delete_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Before Delete Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Before_Insert_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Before Insert Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Before_Update_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Before Update Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Globally_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Globally Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Handler Settings</label>
    <pluralLabel>Trigger Handler Settings</pluralLabel>
    <validationRules>
        <fullName>Prevent_TestTriggerHandler_record_name</fullName>
        <active>true</active>
        <errorConditionFormula>DeveloperName = &apos;TestTriggerHandler&apos;</errorConditionFormula>
        <errorDisplayField>DeveloperName</errorDisplayField>
        <errorMessage>The name &quot;TestTriggerHandler&quot; is reserved for testing purposes!</errorMessage>
    </validationRules>
</CustomObject>